@@ -2,115 +2,148 @@ package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.repository.UserRepository;
-import org.springframework.stereotype.Repository;
-
-import java.io.*;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.concurrent.locks.ReentrantLock;
+import java.util.stream.Stream;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.stereotype.Repository;
 
+@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "file")
 @Repository
 public class FileUserRepository implements UserRepository {
 
-    private final List<User> data = new ArrayList<>();
-    private final Path filePath;
+  private final Path DIRECTORY;
+  private final String EXTENSION = ".ser";
+  private final FileLockProvider fileLockProvider;
 
-    public FileUserRepository() {
-        this.filePath = Path.of("data", "users.ser");
-        load();
+  public FileUserRepository(
+      @Value("${discodeit.repository.file-directory:data}") String fileDirectory,
+      FileLockProvider fileLockProvider
+  ) {
+    this.DIRECTORY = Paths.get(System.getProperty("user.dir"), fileDirectory,
+        User.class.getSimpleName());
+    if (Files.notExists(DIRECTORY)) {
+      try {
+        Files.createDirectories(DIRECTORY);
+      } catch (IOException e) {
+        throw new RuntimeException(e);
+      }
     }
+    this.fileLockProvider = fileLockProvider;
+  }
 
-    private void load() {
-        if (Files.notExists(filePath)) return;
+  private Path resolvePath(UUID id) {
+    return DIRECTORY.resolve(id + EXTENSION);
+  }
 
-        try (ObjectInputStream ois = new ObjectInputStream(new FileInputStream(filePath.toFile()))) {
-            @SuppressWarnings("unchecked")
-            List<User> loaded = (List<User>) ois.readObject();
-            data.clear();
-            data.addAll(loaded);
-        } catch (InvalidClassException e) {
-            System.out.println("이전 버전 파일을 무시하고 새로 시작합니다: " + e.getMessage());
-            data.clear();
-        } catch (IOException | ClassNotFoundException e) {
-            throw new RuntimeException(e);
-        }
+  @Override
+  public User save(User user) {
+    Path path = resolvePath(user.getId());
+    ReentrantLock lock = fileLockProvider.getLock(path);
+    lock.lock();
+
+    try (
+        FileOutputStream fos = new FileOutputStream(path.toFile());
+        ObjectOutputStream oos = new ObjectOutputStream(fos)
+    ) {
+      oos.writeObject(user);
+    } catch (IOException e) {
+      throw new RuntimeException(e);
+    } finally {
+      lock.unlock();
     }
+    return user;
+  }
 
-    private void save() {
-        try {
-            Files.createDirectories(filePath.getParent());
-            try (ObjectOutputStream oos =
-                         new ObjectOutputStream
-                        (new FileOutputStream(filePath.toFile()))) {
-                oos.writeObject(data);
+  @Override
+  public Optional<User> findById(UUID id) {
+    User userNullable = null;
+    Path path = resolvePath(id);
+    ReentrantLock lock = fileLockProvider.getLock(path);
+    lock.lock();
+    if (Files.exists(path)) {
+      try (
+          FileInputStream fis = new FileInputStream(path.toFile());
+          ObjectInputStream ois = new ObjectInputStream(fis)
+      ) {
+        userNullable = (User) ois.readObject();
+      } catch (IOException | ClassNotFoundException e) {
+        throw new RuntimeException(e);
+      } finally {
+        lock.unlock();
+      }
+    }
+    return Optional.ofNullable(userNullable);
+  }
+
+  @Override
+  public Optional<User> findByUsername(String username) {
+    return this.findAll().stream()
+        .filter(user -> user.getUsername().equals(username))
+        .findFirst();
+  }
+
+  @Override
+  public List<User> findAll() {
+    try (Stream<Path> paths = Files.list(DIRECTORY)) {
+      return paths
+          .filter(path -> path.toString().endsWith(EXTENSION))
+          .map(path -> {
+            ReentrantLock lock = fileLockProvider.getLock(path);
+            lock.lock();
+            try (
+                FileInputStream fis = new FileInputStream(path.toFile());
+                ObjectInputStream ois = new ObjectInputStream(fis)
+            ) {
+              return (User) ois.readObject();
+            } catch (IOException | ClassNotFoundException e) {
+              throw new RuntimeException(e);
+            }  finally {
+              lock.unlock();
             }
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
+          })
+          .toList();
+    } catch (IOException e) {
+      throw new RuntimeException(e);
     }
+  }
 
-    @Override
-    public User save(User user) {
-        if (user == null || user.getId() == null) {
-            throw new IllegalArgumentException("User or User ID cannot be null");
-        }
-        // 기존 사용자 제거 후 추가 (업데이트 처리)
-        data.removeIf(u -> u.getId().equals(user.getId()));
-        data.add(user);
-        save();
-        return user;
-    }
+  @Override
+  public boolean existsById(UUID id) {
+    Path path = resolvePath(id);
+    return Files.exists(path);
+  }
 
-    @Override
-    public Optional<User> findById(UUID id) {
-        return data.stream()
-                .filter(u -> u.getId().equals(id))
-                .findFirst();
+  @Override
+  public void deleteById(UUID id) {
+    Path path = resolvePath(id);
+    try {
+      Files.delete(path);
+    } catch (IOException e) {
+      throw new RuntimeException(e);
     }
+  }
 
-    @Override
-    public Optional<User> findByUsername(String username) {
-        return data.stream()
-                .filter(u -> u.getUsername().equals(username))
-                .findFirst();
-    }
+  @Override
+  public boolean existsByEmail(String email) {
+    return this.findAll().stream()
+        .anyMatch(user -> user.getEmail().equals(email));
+  }
 
-    @Override
-    public Optional<User> findByEmail(String email) {
-        return data.stream()
-                .filter(u -> u.getEmail().equals(email))
-                .findFirst();
-    }
-
-    @Override
-    public List<User> findAll() {
-        return new ArrayList<>(data);
-    }
-
-    @Override
-    public boolean existsById(UUID id) {
-        return data.stream()
-                .anyMatch(u -> u.getId().equals(id));
-    }
-
-    @Override
-    public boolean existsByUsername(String username) {
-        return data.stream()
-                .anyMatch(u -> u.getUsername().equals(username));
-    }
-
-    @Override
-    public boolean existsByEmail(String email) {
-        return data.stream()
-                .anyMatch(u -> u.getEmail().equals(email));
-    }
-
-    @Override
-    public void deleteById(UUID id) {
-        data.removeIf(u -> u.getId().equals(id));
-        save();
-    }
+  @Override
+  public boolean existsByUsername(String username) {
+    return this.findAll().stream()
+        .anyMatch(user -> user.getUsername().equals(username));
+  }
 }
